# imlib2_loaders

./: AUTHORS  ChangeLog  README.in  configure.ac  imlib2_loaders.spec.in
src/modules/loaders/: Makefile.am  image.h  loader_ani.c  loader_common.h  loader_ico.c  loader_tga.c  loader_xcf.c  loader_xcf_pixelfuncs.c
